# freefloating_gazebo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  free_float.files  free_float.includes  package.xml
gui/: PoseStamped.yaml  Thrusters.yaml  Velocity.yaml  VelocityDepth.yaml  depth_gui.launch  pose_gui.launch  thruster_gui.launch  velocity_gui.launch
include/freefloating_gazebo/: adaptive_mb_ctl.h  butterworth.h  freefloating_gazebo_control.h  freefloating_gazebo_fluid.h  freefloating_pids.h  freefloating_pids.h.autosave  freefloating_pids_body.h  freefloating_pids_joint.h  hydro_link.h  hydro_model_parser.h  model_control_compute.h  thruster_allocator.h  thruster_mapper.h
launch/: rviz.launch
msg/: BodySetpoint.msg
scripts/: gen_pid.py  ource_retriever.get_filename(substitution_args.resolve_args(mesh.get('filename')))  plot_topic.py  rviz_bridge.py  uwsim_scene_to_gazebo_spawner.py
scripts/gen_pid/: gen_pid.py  pids.py  tunepid.py  tunepid.ui
scripts/gen_pid/gen_pid/: gen_pid.pro  main.cpp  tunepid.cpp  tunepid.h  tunepid.py  tunepid.ui
src/: adaptive_mb_ctl.cpp  adaptive_mb_main.cpp  freefloating_gazebo_control.cpp  freefloating_gazebo_control2.cpp  freefloating_gazebo_demo.cpp  freefloating_gazebo_fluid.cpp  freefloating_pids.cpp  freefloating_pids_body.cpp  freefloating_pids_joint.cpp  freefloating_pids_joint.cpp.autosave  freefloating_pids_main.cpp  hydro_link.cpp  hydro_model_parser.cpp  model_control_compute.cpp  model_control_main.cpp  thruster_allocator.cpp  thruster_mapper.cpp
src/pids/: pid_body.cpp  pid_body_joints.cpp  pid_joints.cpp
test/: sdf_parse.cpp
world/: underwater.world
